--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,42 +45,44 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 217.2 32.6% 17.5%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 202 100% 50%;
+    --primary-foreground: 0 0% 100%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --secondary: 339 100% 61.8%;
+    --secondary-foreground: 0 0% 100%;
 
-    --third: 217.2 32.6% 17.5%;
-    --third-foreground: 210 40% 98%;
+    --third: 231 73.3% 51.6%;
+    --third-foreground: 0 0% 100%;
 
-    --fourth: 217.2 32.6% 17.5%;
-    --fourth-foreground: 210 40% 98%;
+    --fourth: 338 80% 96.1%;
+    --fourth-foreground: 0 0% 100%;
 
-    --fifth: 217.2 32.6% 17.5%;
-    --fifth-foreground: 210 40% 98%;
+    --fifth: 338 80% 96.1%;
+    --fifth-foreground: 222.2 84% 4.9%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
   }
 }
 
