style: login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,9 @@
     --fifth: 202 100% 90%;
     --fifth-foreground: 222.2 84% 4.9%;
 
+    --sixth: 237 89.9% 15.5%;
+    --sixth-foreground: 0 0% 100%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
@@ -68,6 +71,9 @@
 
     --fifth: 202 100% 90%;
     --fifth-foreground: 222.2 84% 4.9%;
+
+    --sixth: 237 89.9% 15.5%;
+    --sixth-foreground: 0 0% 100%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
