style: course page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,9 @@
     --sixth: 237 89.9% 15.5%;
     --sixth-foreground: 0 0% 100%;
 
+    --seventh: 32 97.8% 63.5%;
+    --seventh-foreground: 0 0% 100%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
@@ -74,6 +77,9 @@
 
     --sixth: 237 89.9% 15.5%;
     --sixth-foreground: 0 0% 100%;
+
+    --seventh: 32 97.8% 63.5%;
+    --seventh-foreground: 0 0% 100%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
