style: product page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,9 @@
     --seventh: 32 97.8% 63.5%;
     --seventh-foreground: 0 0% 100%;
 
+    --eighth: 338 100% 95%;
+    --eighth-foreground: 338 5% 0%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
@@ -80,6 +83,9 @@
 
     --seventh: 32 97.8% 63.5%;
     --seventh-foreground: 0 0% 100%;
+
+    --eighth: 338 100% 95%;
+    --eighth-foreground: 338 5% 0%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
