--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,7 +130,48 @@
   h3 {
     @apply text-lg font-bold;
   }
+  p {
+    @apply break-words break-all;
+  }
+  /* Data-type */
+  /* [data-type='custom-column'] {
+    @apply flex gap-4 p-2 border-dashed border border-border;
+  }
+  [data-type='custom-column'] > * {
+    @apply flex-1;
+  }
+  [data-type='custom-column'][layout='sidebar-left'] > *:first-child,
+  [data-type='custom-column'][layout='sidebar-right'] > *:last-child {
+    @apply flex-none w-1/3;
+  }
+  [data-type='custom-column'][layout='sidebar-left'] > *:last-child,
+  [data-type='custom-column'][layout='sidebar-right'] > *:first-child {
+    @apply flex-none w-2/3;
+  } */
+
+  [data-type='columns'] {
+    @apply flex gap-x-4;
+  }
+  [data-type='columns'][layout='layout-sidebar-left'] > *:first-child,
+  [data-type='columns'][layout='layout-sidebar-right'] > *:last-child {
+    @apply flex-none w-1/3;
+  }
+  [data-type='columns'][layout='layout-sidebar-left'] > *:last-child,
+  [data-type='columns'][layout='layout-sidebar-right'] > *:first-child {
+    @apply flex-none w-2/3;
+  }
+  [data-type='column'] {
+    @apply flex-1;
+  }
+  .ProseMirror p {
+    @apply pt-2;
+  }
+
+  /* [data-type='column'] {
+    @apply flex-1 p-2 border-dashed border border-gray-300 rounded-md;
+  } */
 }
+
 @media (min-width: 0px) {
   ::-webkit-scrollbar {
     border-radius: 0;
@@ -147,4 +188,33 @@
     background-color: transparent;
     border-radius: 0;
   }
+}
+
+/* .ProseMirror [data-type='custom-column'] {
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
+  border: 1px dashed #ccc;
+  padding: 0.5rem;
+}
+.ProseMirror [data-type='custom-column'] > * {
+  flex: 1;
+}
+.ProseMirror [data-type='custom-column'][layout='sidebar-left'] > *:first-child,
+.ProseMirror [data-type='custom-column'][layout='sidebar-right'] > *:last-child {
+  flex: 0 0 30%;
+}
+.ProseMirror [data-type='custom-column'][layout='sidebar-left'] > *:last-child,
+.ProseMirror [data-type='custom-column'][layout='sidebar-right'] > *:first-child {
+  flex: 0 0 70%;
+} */
+
+.ProseMirror [data-type='column'] {
+  padding: 2px;
+  border: 1px dashed #ccc;
+  border-radius: 0.375rem;
+}
+
+.ProseMirror p {
+  padding-top: 2px;
 }
