--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@
     @apply text-lg font-bold;
   }
   p {
-    @apply break-words break-all;
+    @apply break-words;
   }
   /* Data-type */
   /* [data-type='custom-column'] {
@@ -164,7 +164,7 @@
     @apply flex-1;
   }
   .ProseMirror p {
-    @apply pt-2;
+    @apply pt-2 break-all;
   }
 
   /* [data-type='column'] {
@@ -217,4 +217,6 @@
 
 .ProseMirror p {
   padding-top: 2px;
+  word-break: break-all;
+  word-wrap: break-word;
 }
